parser/tests/snapshots/parser__parse_attributes_ignoring_comments_after_them.snap
---
source: parser/tests/parser.rs
description: "@log(\"path/to/file\") \n                // ignored\n                get /api"
expression: ast
---
Program(
  items: [
    Attribute(
      location: Location(
        line: 0,
        col: 0,
      ),
      identifier: Identifier(
        name: "log",
        span: Span(
          start: Location(
            line: 0,
            col: 1,
          ),
          end: Location(
            line: 0,
            col: 4,
          ),
        ),
      ),
      parameters: [
        String(StringLiteral(
          raw: "\"path/to/file\"",
          value: "path/to/file",
          span: Span(
            start: Location(
              line: 0,
              col: 5,
            ),
            end: Location(
              line: 0,
              col: 19,
            ),
          ),
        )),
      ],
    ),
    LineComment(Literal(
      value: "// ignored",
      span: Span(
        start: Location(
          line: 1,
          col: 16,
        ),
        end: Location(
          line: 1,
          col: 26,
        ),
      ),
    )),
    Request(
      method: GET,
      endpoint: Pathname(Literal(
        value: "/api",
        span: Span(
          start: Location(
            line: 2,
            col: 20,
          ),
          end: Location(
            line: 2,
            col: 24,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Location(
          line: 2,
          col: 16,
        ),
        end: Location(
          line: 2,
          col: 24,
        ),
      ),
    ),
  ],
)
