parser/tests/snapshots/parser__parse_env_call_expression.snap
---
source: parser/tests/parser.rs
description: "post http://localhost { header \"name\" env(\"auth\") body env(\"data\") }"
expression: ast
---
Program(
  items: [
    Request(
      method: POST,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Location(
            line: 0,
            col: 5,
          ),
          end: Location(
            line: 0,
            col: 21,
          ),
        ),
      )),
      params: [
        Header(
          name: StringLiteral(
            raw: "\"name\"",
            value: "name",
            span: Span(
              start: Location(
                line: 0,
                col: 31,
              ),
              end: Location(
                line: 0,
                col: 37,
              ),
            ),
          ),
          value: Call(
            identifier: Identifier(
              name: "env",
              span: Span(
                start: Location(
                  line: 0,
                  col: 38,
                ),
                end: Location(
                  line: 0,
                  col: 41,
                ),
              ),
            ),
            arguments: [
              String(StringLiteral(
                raw: "\"auth\"",
                value: "auth",
                span: Span(
                  start: Location(
                    line: 0,
                    col: 42,
                  ),
                  end: Location(
                    line: 0,
                    col: 48,
                  ),
                ),
              )),
            ],
          ),
        ),
        Body(
          value: Call(
            identifier: Identifier(
              name: "env",
              span: Span(
                start: Location(
                  line: 0,
                  col: 55,
                ),
                end: Location(
                  line: 0,
                  col: 58,
                ),
              ),
            ),
            arguments: [
              String(StringLiteral(
                raw: "\"data\"",
                value: "data",
                span: Span(
                  start: Location(
                    line: 0,
                    col: 59,
                  ),
                  end: Location(
                    line: 0,
                    col: 65,
                  ),
                ),
              )),
            ],
          ),
          start: Location(
            line: 0,
            col: 50,
          ),
        ),
      ],
      span: Span(
        start: Location(
          line: 0,
          col: 0,
        ),
        end: Location(
          line: 0,
          col: 65,
        ),
      ),
    ),
  ],
)
