parser/tests/snapshots/parser__parse_get_urls.snap
---
source: parser/tests/parser.rs
description: "get http://localhost:8080\n        get http://localhost:8080 {}"
expression: ast
---
Program(
  items: [
    Request(
      method: GET,
      endpoint: Url(Literal(
        value: "http://localhost:8080",
        span: Span(
          start: Location(
            line: 0,
            col: 4,
          ),
          end: Location(
            line: 0,
            col: 25,
          ),
        ),
      )),
      params: [],
      span: Span(
        start: Location(
          line: 0,
          col: 0,
        ),
        end: Location(
          line: 0,
          col: 25,
        ),
      ),
    ),
    Request(
      method: GET,
      endpoint: Url(Literal(
        value: "http://localhost:8080",
        span: Span(
          start: Location(
            line: 1,
            col: 12,
          ),
          end: Location(
            line: 1,
            col: 33,
          ),
        ),
      )),
      params: [],
      span: Span(
        start: Location(
          line: 1,
          col: 8,
        ),
        end: Location(
          line: 1,
          col: 33,
        ),
      ),
    ),
  ],
)
