parser/tests/snapshots/parser__parse_json_object.snap
---
source: parser/tests/parser.rs
description: "\nlet o = {\n    key: \"value\",\n    akey: \"234va\",\n    love: \"me\"\n}"
expression: ast
---
Program(
  items: [
    Let(
      identifier: Identifier(
        name: "o",
        span: Span(
          start: Location(
            line: 1,
            col: 4,
          ),
          end: Location(
            line: 1,
            col: 5,
          ),
        ),
      ),
      value: Object((Span(
        start: Location(
          line: 1,
          col: 8,
        ),
        end: Location(
          line: 5,
          col: 1,
        ),
      ), [
        ("key", String(StringLiteral(
          raw: "\"value\"",
          value: "value",
          span: Span(
            start: Location(
              line: 2,
              col: 9,
            ),
            end: Location(
              line: 2,
              col: 16,
            ),
          ),
        ))),
        ("akey", String(StringLiteral(
          raw: "\"234va\"",
          value: "234va",
          span: Span(
            start: Location(
              line: 3,
              col: 10,
            ),
            end: Location(
              line: 3,
              col: 17,
            ),
          ),
        ))),
        ("love", String(StringLiteral(
          raw: "\"me\"",
          value: "me",
          span: Span(
            start: Location(
              line: 4,
              col: 10,
            ),
            end: Location(
              line: 4,
              col: 14,
            ),
          ),
        ))),
      ])),
    ),
  ],
)
