parser/tests/snapshots/parser__parse_json_object_ignoring_comments.snap
---
source: parser/tests/parser.rs
description: "\nlet o = {\n    key: \"value\",\n    // akey: 123,\n    love: [\n        \"asdf\",\n        // asdf,\n        12\n    ]\n}"
expression: ast
---
Program(
  items: [
    Let(
      identifier: Identifier(
        name: "o",
        span: Span(
          start: Location(
            line: 1,
            col: 4,
          ),
          end: Location(
            line: 1,
            col: 5,
          ),
        ),
      ),
      value: Object((Span(
        start: Location(
          line: 1,
          col: 8,
        ),
        end: Location(
          line: 9,
          col: 1,
        ),
      ), {
        "key": String(StringLiteral(
          raw: "\"value\"",
          value: "value",
          span: Span(
            start: Location(
              line: 2,
              col: 9,
            ),
            end: Location(
              line: 2,
              col: 16,
            ),
          ),
        )),
        "love": Array((Span(
          start: Location(
            line: 4,
            col: 10,
          ),
          end: Location(
            line: 8,
            col: 5,
          ),
        ), [
          String(StringLiteral(
            raw: "\"asdf\"",
            value: "asdf",
            span: Span(
              start: Location(
                line: 5,
                col: 8,
              ),
              end: Location(
                line: 5,
                col: 14,
              ),
            ),
          )),
          Number(Literal(
            value: "12",
            span: Span(
              start: Location(
                line: 7,
                col: 8,
              ),
              end: Location(
                line: 7,
                col: 10,
              ),
            ),
          )),
        ])),
      })),
    ),
  ],
)
